--- a/DESeq2.Rmd
+++ b/DESeq2.Rmd
@@ -12,8 +12,8 @@ library("DESeq2")
 library(tidyverse)
 library(ggrepel)
 library(dplyr)
-
-# tnew text finally its working
+imbocca a ammamerttsvcds 
+text finally its working
 
 ```
 
