--- a/THRA_isoform_Expression_Coverage_GEO_GSE120795.Rmd
+++ b/THRA_isoform_Expression_Coverage_GEO_GSE120795.Rmd
@@ -9,7 +9,8 @@ output:
 
 INTRODUCTION to the Experiment
 
-A total of 24 samples of human tissues. RNA seq data. First-Stranded pair-end reads. Read counts of exon 9a (Chr17:40089333) and exon 9b (Chr17:40089334)
+	A total of 148 solid tissue samples representing 20 organs were taken from post-mortal human healthy donors killed in road accidents no later than 36 hours after death. Prior to RNA extraction solid normal tissue samples were stored either in RNAlater or as Formalin-Fixed Paraffin-Embedded (FFPE) blocks. Blood and bone marrow samples were taken from 6 and 11 healthy volunteers respectively and subjected immediately to RNA extraction. Following ribosomal RNA depletion and RNA libraries construction transcription profiles of the samples were obtained using Illumina HiSeq 3000.
+First-Stranded single-end reads. 50bp. Read counts of THRA exon 9a (Chr17:40089333) and exon 9b (Chr17:40089334)
 
 ```{r}
 #load libraries
@@ -28,16 +29,16 @@ library(dplyr)
 
 ```{r}
 ## set paths for output figure
-path_plots <- "~/OneDrive - Charité - Universitätsmedizin Berlin/Schuelke_Lab/EG15_RNA_Seq/TAKARA_Samples/THRA_isoform_Expression_Coverage"
+path_plots <- "~/OneDrive - Charité - Universitätsmedizin Berlin/Schuelke_Lab/EG15_RNA_Seq/GEO_GSE120795/THRA_isoform_Expression_Coverage"
 
 ## load metadata file
 
-metadata <- read_excel("metadata.xlsx")
+metadata <- read.delim("metadata_GEO_GSE120795.txt", sep=",")
+metadata_tissues <- select(metadata, Run, "Sample" =source_name)
 
 
 ##Load bedtools outputs
-
-file_links_bedtools <- list.files(path= "~/OneDrive - Charité - Universitätsmedizin Berlin/Schuelke_Lab/EG15_RNA_Seq/TAKARA_Samples/bedtools_outputs" , pattern = "*.txt", full.names=T)
+file_links_bedtools <- list.files(path= "~/OneDrive - Charité - Universitätsmedizin Berlin/Schuelke_Lab/EG15_RNA_Seq/GEO_GSE120795/bedtools_outputs" , pattern = "*.txt", full.names=T)
 
 
 # initialize an empty dataframe
@@ -46,21 +47,32 @@ data_bedtools <- data_frame("V1"=character(),
                    "V3"=integer(),
                    "V4"=character(),
                    "V5"=double(),
-                   "Sample"=character()) 
+                   "Run"=character()) 
 
 for (x in file_links_bedtools) {
   table_sample <- read.delim(x, header = FALSE) ## read table
-  basename_sample <- str_remove(basename(x), "_Aligned.out.bedtools.txt")  ## get the sample name from the file path
-  table_sample <- mutate(table_sample, "Sample"=basename_sample)
-  data_bedtools <- bind_rows(data_bedtools, table_sample)
+  basename_sample <- basename(x)
+  table_sample <- mutate(table_sample, "Run"=basename_sample)
+  sum_column <- table_sample$V5
+  
+  # if statement to filter out samples that have 0 coverage in both exon 9a and 9b
+  if (sum(sum_column)  > 0) {
+    data_bedtools <- bind_rows(data_bedtools, table_sample)
+  }
+    
   
 }
+
+#extract the SSR number and merge with the Sample name
+data_bedtools <- data_bedtools %>%
+  separate("Run","Run", "_") %>%
+  left_join(metadata_tissues, by="Run")
 
 data_bedtools
 
 ##Load mosdepth outputs
 
-file_links_mosdepth <- list.files(path= "~/OneDrive - Charité - Universitätsmedizin Berlin/Schuelke_Lab/EG15_RNA_Seq/TAKARA_Samples/mosdepth_outputs" , pattern = "*.bed", full.names=T)
+file_links_mosdepth <- list.files(path= "~/OneDrive - Charité - Universitätsmedizin Berlin/Schuelke_Lab/EG15_RNA_Seq/GEO_GSE120795/mosdepth_outputs" , pattern = "*.bed", full.names=T)
 
 
 # initialize an empty dataframe
@@ -69,15 +81,26 @@ data_mosdepth <- data_frame("V1"=character(),
                    "V3"=integer(),
                    "V4"=character(),
                    "V5"=double(),
-                   "Sample"=character()) 
+                   "Run"=character()) 
 
 for (x in file_links_mosdepth) {
   table_sample <- read.delim(x, header = FALSE) ## read table
-  basename_sample <- str_remove(basename(x), "_Aligned.out.regions.bed")  ## get the sample name from the file path
-  table_sample <- mutate(table_sample, "Sample"=basename_sample)
-  data_mosdepth <- bind_rows(data_mosdepth, table_sample)
+  basename_sample <- basename(x)
+  table_sample <- mutate(table_sample, "Run"=basename_sample)
+  sum_column <- table_sample$V5
+  
+  # if statement to filter out samples that have 0 coverage in both exon 9a and 9b
+  if (sum(sum_column)  > 0) {
+    data_mosdepth <- bind_rows(data_mosdepth, table_sample)
+  }
+    
   
 }
+
+#extract the SSR number and merge with the Sample name
+data_mosdepth <- data_mosdepth %>%
+  separate("Run","Run", "_")%>%
+  left_join(metadata_tissues, by="Run")
 
 data_mosdepth
 
