--- a/THRA_isoform_Expression_Coverage_GEO_GSE120795.Rmd
+++ b/THRA_isoform_Expression_Coverage_GEO_GSE120795.Rmd
@@ -330,15 +330,17 @@ heatmap_data_percentage_boxplot <- filter(dataset_final, Package == "mosdepth") 
   group_by(Sample) %>%
   mutate(THRA1_Percentage_mean=round(mean(THRA1_Percentage))) %>%
   mutate("THRA1_higher" = THRA1_Percentage_mean >50 ) %>%
+  mutate(replicates = sum(Sample == Sample)) %>%  ## counts the repicates (the n number)
+  mutate(labels = paste0(Sample, ", n=", replicates)) %>%
   ungroup()
 
 heatmap_data_percentage_boxplot <- heatmap_data_percentage_boxplot[order(heatmap_data_percentage_boxplot$THRA1_Percentage_mean), ]  # sort
 heatmap_data_percentage_boxplot <- mutate(heatmap_data_percentage_boxplot, ID = row_number())
 
 # Diverging Barcharts
-ggplot(heatmap_data_percentage_boxplot, aes(x=reorder(Sample, ID), y=THRA1_Percentage, label=THRA1_Percentage)) + 
+ggplot(heatmap_data_percentage_boxplot, aes(x=reorder(labels, ID), y=THRA1_Percentage, label=THRA1_Percentage)) + 
   geom_boxplot(aes(fill=THRA1_higher), width=.5)  +
-  #  geom_jitter(color="black", size=0.4, alpha=0.9) +  ## optional in case of a lot of replicates to avoid overlapping of dots
+  #  geom_jitter(color="black", size=0.9, alpha=0.9) +  ## optional in case of a lot of replicates to avoid overlapping of dots
    theme_light(base_size = 12)+
   scale_fill_manual(name="Predominant Isoform", 
                     labels = c("THRA1", "THRA2"), 
